2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* server.c (OBJECT_): Use object_lookup_rel, not CAP_, to find
	objects.
	(ROOT): If ROOT_ADDR_ is not ADDR_VOID, use OBJECT to find the
	thread.  If that fails, use SLOT, not CAP, to find the capability
	slot.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* ia32-crt0.S (_start): Clear EBP before jumping to cmain.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* as.h (as_insert): Change return type to struct cap *.
	* as.c (as_insert): Change return type to struct cap *.
	Return SLOT.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* object.c (folio_object_alloc): When reallocating an object and
	the object is in memory, clear the memory.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* cap-lookup.c (lookup): When calculating the value for *WRITABLE,
	only consider the permission to dereference the capability in the
	resolved slot when MODE is want_object.

	Tweak debugging output.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* cap-lookup.c (print_nr): Use s_printf and s_putchar instead of
	printf and putchar.

	(do_walk): Take additional argument descend.  If false, after
	printing the capability, just return.  Update callers.

2008-02-08  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Raise debugging level of futex debugging
	output.

2008-02-08  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am (viengoos_LDADD): Link against newlib's
	`libc-routines.a'.

2008-02-08  Neal H. Walfield  <neal@gnu.org>

	* object.h (memory_object_destroy): Update comment to indicate
	that LRU_LOCK must not be held by the caller.
	(object_desc_claim): Update comment to indicate that LRU_LOCK must
	be held by the caller.
	* object.c (memory_object_destroy): Don't assert that LRU_LOCK is
	held.  Take the lock before calling object_desc_claim.
	(object_desc_claim): Assert that LRU_LOCK is held.
	* viengoos.c (system_task_load): Take LRU_LOCK before calling
	object_claim.
